# arena

./: README.md
arena-0.9.13/: Makefile.in  README  aclocal.m4  api.c  arena.c  configure  configure.ac
arena-0.9.13/doc/: CHANGES  CREDITS  HACKING  NEWS  TODO
arena-0.9.13/doc/manual/: manual.asc  transform.in
arena-0.9.13/examples/: cat.are  dc.are  markov.are  strfreq.are  tictactoe.are
arena-0.9.13/examples/netbsd/: README  cgrep.are  grep.are  libcurses.are  liblist.are
arena-0.9.13/libeval/: eval.h  eval_bool.c  eval_call.c  eval_cast.c  eval_expr.c  eval_math.c  eval_method.c  eval_order.c  eval_ref.c  eval_stmt.c  eval_switch.c
arena-0.9.13/libmisc/: misc_error.c  misc_state.c
arena-0.9.13/libparser/: expr_dump.c  expr_memory.c  expr_parse.c  grammar.y  lex.yy.c  parser.h  stmt_dump.c  y.tab.c  y.tab.h
arena-0.9.13/libruntime/: Makefile.in  call_func.c  call_sig.c  runtime.h  symtab_entry.c  symtab_memory.c  value_array.c  value_cons.c  value_dump.c  value_memory.c  value_struct.c
arena-0.9.13/libstdlib/: dict.c  foreign.c  function.c  locale.c  math.c  memory.c  pcre.c  random.c  register.c  runtime.c  stdlib.h  system.c  time.c
arena-0.9.13/tests/: Makefile.in  call.c  cast.c  complex.c  eval.c  math.c  simple.c  test.c  test.h  userdef.c  value.c
arena-0.9.13/tests/data/complex/: hanoi
arena-0.9.13/tests/data/semantic/: assign  cast  function  function_cast  index  infix  lambda  missing  order  reference  source  template  undef_method  undef_parent  undef_static_method
arena-0.9.13/tests/data/simple/: assign_nested  block  call  while  (+3 more)
(+107 files in other folders)
